--- a/tools/codeConverter.html
+++ b/tools/codeConverter.html
@@ -6,7 +6,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Automatic line reading snippet</title>
+	<title>Codes txt to JSON</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
