--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,14 @@
   <link rel="stylesheet" href="assets/css/main.css" />
   <link rel="stylesheet" href="assets/css/styles2.css">
 
+
+  <meta property="og:url" content="http://www.klang-heimilich.me" />
+  <meta property="og:type" content="article" />
+  <meta property="og:title" content="Klang Heimlich Zürich" />
+  <meta property="og:description" content="Klang Heimlich Zürich" />
+  <meta property="og:image" content="assets/images/logokh.png" />
+
+
 </head>
 <body style="background-position: center 0px;">
   <app-root><div class="loading"></div></app-root>
