--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
   <meta property="og:type" content="article" />
   <meta property="og:title" content="Klang Heimlich Zürich" />
   <meta property="og:description" content="The passion for the music, the sense of community and unconditional love for our neighbours, losing track of time while dancing and the creation of new worlds from scratch in unique locations represent the pillars of Klang ♫ Heimlich. We aim to share our philosophie of life with you and take you with us on a musical trip where memories are kept in our hearts because they are shared." />
-  <meta property="og:image" content="assets/images/logokh.png" />
+  <meta property="og:image" content="assets/images/logokh2.png" />
 
 </head>
 <body style="background-position: center 0px;">
